# kalman_practice

./: Cargo.toml
kalman_practice/: kalman_practice.py
src/: goddanged_kalman.py  main.rs
