[package]
name = "kalman_practice"
version = "0.1.0"
authors = ["Cody Hutchins <cody.hutchins@cosmicaes.com>"]
edition = "2018"

[dependencies]
linearkalman = "0.1.3"
kalman_rs = "0.1.3"
rulinalg = "*"
nalgebra = "0.17.3"
plotlib = "0.4.0"
num-traits = "*"
choldate-rs = { git = "https://git.eng.cosmicaes.com/satellite-tracking/choldate-rs" }